--- a/languages/visualizer.pot
+++ b/languages/visualizer.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the GPL v2.0 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Visualizer: Charts and Graphs Lite 2.1.9\n"
+"Project-Id-Version: Visualizer: Charts and Graphs Lite 2.2.0\n"
 "Report-Msgid-Bugs-To: https://github.com/Codeinwp/visualizer/issues\n"
-"POT-Creation-Date: 2017-08-12 09:32:31+00:00\n"
+"POT-Creation-Date: 2017-08-16 11:04:21+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -375,7 +375,6 @@ msgid "View Editor"
 msgstr ""
 
 #: classes/Visualizer/Render/Page/Data.php:243
-#: classes/Visualizer/Render/Sidebar.php:150
 msgid "Advanced Settings"
 msgstr ""
 
@@ -1405,8 +1404,12 @@ msgstr ""
 msgid "Aligned to the end of the allocated area"
 msgstr ""
 
+#: classes/Visualizer/Render/Sidebar.php:150
+msgid "Frontend Actions"
+msgstr ""
+
 #: classes/Visualizer/Render/Sidebar.php:152
-msgid "Configure advanced functionality here."
+msgid "Configure frontend actions here."
 msgstr ""
 
 #: classes/Visualizer/Render/Sidebar.php:165
