--- a/languages/visualizer-ja.po
+++ b/languages/visualizer-ja.po
@@ -8,7 +8,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2021-11-17 21:45+0900\n"
+"PO-Revision-Date: 2021-11-17 23:11+0900\n"
 "Language-Team: \n"
 "X-Generator: Poedit 3.0\n"
 "Last-Translator: \n"
@@ -32,15 +32,15 @@ msgstr "デベロッパー"
 
 #: classes/Visualizer/Module/Admin.php:125
 msgid "Live"
-msgstr "ライブ"
+msgstr "リアルタイム"
 
 #: classes/Visualizer/Module/Admin.php:126
 msgid "Each hour"
-msgstr "毎時間"
+msgstr "毎時"
 
 #: classes/Visualizer/Module/Admin.php:127
 msgid "Each 12 hours"
-msgstr "12時間ごとに"
+msgstr "毎12時間"
 
 #: classes/Visualizer/Module/Admin.php:128
 msgid "Each day"
@@ -48,11 +48,11 @@ msgstr "毎日"
 
 #: classes/Visualizer/Module/Admin.php:129
 msgid "Each 3 days"
-msgstr "3日おきに"
+msgstr "3日毎"
 
 #: classes/Visualizer/Module/Admin.php:148
 msgid "More in the %s version"
-msgstr "%sバージョンの詳細"
+msgstr "%sバージョンの詳細設定"
 
 #: classes/Visualizer/Module/Admin.php:329
 msgid "Insert"
@@ -398,7 +398,7 @@ msgstr "エンドポイントを取得"
 
 #: classes/Visualizer/Render/Layout.php:176
 msgid "Headers"
-msgstr "ヘッダー"
+msgstr "ヘッダ"
 
 #: classes/Visualizer/Render/Layout.php:179
 msgid "Request Type"
@@ -431,7 +431,7 @@ msgstr "例: 共有鍵 <AccountName>:<Signature>"
 
 #: classes/Visualizer/Render/Layout.php:225
 msgid "Additional headers"
-msgstr "追加のヘッダー"
+msgstr "追加のヘッダ"
 
 #: classes/Visualizer/Render/Layout.php:227
 msgid "Key:Value, Key2:Value2,..."
@@ -538,7 +538,7 @@ msgstr "パーミッション"
 
 #: classes/Visualizer/Render/Layout.php:504
 msgid "Configure permissions for the chart."
-msgstr "グラフのパーミッションを設定。"
+msgstr "グラフのパーミッションの設定"
 
 #: classes/Visualizer/Render/Layout.php:507
 msgid "Who can see this chart?"
@@ -636,8 +636,8 @@ msgid ""
 "You can use this to import data from a remote CSV file or %1$sGoogle "
 "Spreadsheet%2$s."
 msgstr ""
-"これでリモートのCSVファイル、または%1$sGoogle Spreadsheet%2$sからデータをイン"
-"ポートできます。"
+"リモートのCSVファイル、または%1$sGoogle Spreadsheet%2$sからデータをインポート"
+"できます。"
 
 #: classes/Visualizer/Render/Layout.php:716
 msgid "Please enter the URL of CSV file"
@@ -648,7 +648,7 @@ msgstr "CSVファイルのURLを入力してください"
 #: classes/Visualizer/Render/Layout.php:888
 #: classes/Visualizer/Render/Layout.php:937
 msgid "One-time"
-msgstr "ワンタイム"
+msgstr "一度だけ"
 
 #: classes/Visualizer/Render/Layout.php:746
 msgid "Import & Save schedule"
@@ -750,11 +750,11 @@ msgstr "クエリーの作成"
 
 #: classes/Visualizer/Render/Layout.php:964
 msgid "Manual Data"
-msgstr "手動のデータ"
+msgstr "データを編集"
 
 #: classes/Visualizer/Render/Layout.php:975
 msgid "Use the"
-msgstr "使う"
+msgstr " "
 
 #: classes/Visualizer/Render/Layout.php:981
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Pie.php:218
@@ -767,7 +767,7 @@ msgstr "シンプル"
 
 #: classes/Visualizer/Render/Layout.php:986
 msgid "editor to manually edit the chart data."
-msgstr "グラフのデータを編集するエディタ"
+msgstr "エディタでグラフのデータを編集"
 
 #: classes/Visualizer/Render/Layout.php:988
 #: classes/Visualizer/Render/Layout.php:997
@@ -1078,7 +1078,7 @@ msgstr "グラフの説明"
 msgid ""
 "Description to display in the structured data schema as explained %1$shere"
 "%2$s"
-msgstr "%1$shere%2$s で説明されている構造化データスキーマに表示する説明"
+msgstr "%1$sここ%2$s で解説されている構造化データスキーマ内に表示する説明"
 
 #: classes/Visualizer/Render/Sidebar/ChartJS.php:194
 #: classes/Visualizer/Render/Sidebar/Google.php:167
@@ -1134,7 +1134,7 @@ msgstr "位置"
 #: classes/Visualizer/Render/Sidebar/ChartJS.php:244
 #: classes/Visualizer/Render/Sidebar/Google.php:216
 msgid "Determines where to place the legend, compared to the chart area."
-msgstr "グラフエリアにおける凡例の位置を決定する"
+msgstr "グラフエリアにおける凡例の位置"
 
 #: classes/Visualizer/Render/Sidebar/ChartJS.php:248
 msgid "Show datasets in reverse order"
@@ -1254,7 +1254,7 @@ msgstr "easeOutQuint"
 #: classes/Visualizer/Render/Sidebar/ChartJS.php:359
 #: classes/Visualizer/Render/Sidebar/Google.php:301
 msgid "The easing function applied to the animation."
-msgstr "アニメーションに適用するエージング関数"
+msgstr "アニメーションに適用するイージング機能"
 
 #: classes/Visualizer/Render/Sidebar/ChartJS.php:375
 #: classes/Visualizer/Render/Sidebar/Google.php:317
@@ -1291,7 +1291,7 @@ msgid ""
 "or a number followed by %. A simple number is a value in pixels; a number "
 "followed by % is a percentage."
 msgstr ""
-"グラフの全体サイズを設定。2種類のフォーマットをサポート: 数値あるいは%付きの"
+"グラフの全体サイズの設定。2種類のフォーマットをサポート: 数値あるいは%付きの"
 "数値。数値のみの場合はピクセル数、%付きの場合はパーセントになります。"
 
 #: classes/Visualizer/Render/Sidebar/ChartJS.php:415
@@ -1339,8 +1339,8 @@ msgid ""
 "The type of the entity that receives focus on mouse hover. Also affects "
 "which entity is selected by mouse click."
 msgstr ""
-"マウスが来た時にフォーカスする要素のタイプ。マウスクリック時に選択される要素"
-"にも影響します。"
+"マウスホバーでフォーカスする要素の種類。マウスクリック時に選択される要素にも"
+"影響します。"
 
 #: classes/Visualizer/Render/Sidebar/Columnar.php:59
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Area.php:83
@@ -1371,7 +1371,7 @@ msgstr "軸のテキストの色"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:67
 msgid "Omit the legend"
-msgstr "凡例を非表示"
+msgstr "表示しない"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:72
 #: classes/Visualizer/Render/Sidebar/Graph.php:80
@@ -1380,7 +1380,7 @@ msgstr "グラフの中"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:81
 msgid "Aligned to the start of the allocated area"
-msgstr "割り当てられたエリアの開始位置に揃える"
+msgstr "割り当てられたエリアの上端に揃える"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:82
 msgid "Centered in the allocated area"
@@ -1388,11 +1388,11 @@ msgstr "割り当てられたエリアの中央に揃える"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:83
 msgid "Aligned to the end of the allocated area"
-msgstr "割り当てられたエリアの端に揃える"
+msgstr "割り当てられたエリアの下端に揃える"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:141
 msgid "Special Role"
-msgstr "特殊なロール"
+msgstr "特殊な役割"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:145
 msgid "Default (Data)"
@@ -1431,8 +1431,8 @@ msgid ""
 "Determines whether the series has to be used for a special role as mentioned "
 "in %1$shere%2$s. You can view a few examples %3$shere%4$s."
 msgstr ""
-"%1$shere%2$sで説明されている特殊なロールとしてデータシリーズを扱うかを決"
-"定。%3$shere%4$sにある例を参照可能です。"
+"%1$sここ%2$sで解説されている特殊な役割としてデータシリーズを扱うか。%3$sここ"
+"にある例%4$sを参照可能"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:220
 msgid "Alignment"
@@ -1465,16 +1465,16 @@ msgstr "ゆっくり開始し、速度を速め、それからゆっくりにす
 #: classes/Visualizer/Render/Sidebar/Google.php:322
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Geo.php:209
 msgid "The tooltip will be displayed when the user hovers over an element"
-msgstr "要素にホバーした時にツールヒントが表示されます。"
+msgstr "要素にホバーした時にツールヒントを表示"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:323
 msgid "The tooltip will be displayed when the user selects an element"
-msgstr "要素を選択した時にツールヒントが表示されます。"
+msgstr "要素を選択した時にツールヒントを表示"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:324
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Geo.php:210
 msgid "The tooltip will not be displayed"
-msgstr "ツールヒントが表示されません。"
+msgstr "ツールヒントを表示しない"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:326
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Geo.php:212
@@ -1490,8 +1490,7 @@ msgstr "カラーコードを表示"
 msgid ""
 "If set to yes, will show colored squares next to the slice information in "
 "the tooltip."
-msgstr ""
-"yesの場合、ツールヒントのスライス情報の隣に色つきの正方形が表示されます。"
+msgstr "yesの場合、ツールヒントのスライス情報の隣に色つきの正方形を表示"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:346
 msgid "Chart Size & Placement"
@@ -1513,7 +1512,7 @@ msgstr "グラフの主エリアの背景色とグラフの境界の幅・色の
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Candlestick.php:126
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Geo.php:423
 msgid "Stroke Width"
-msgstr "枠線の太さ"
+msgstr "枠線の幅"
 
 #: classes/Visualizer/Render/Sidebar/Google.php:378
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Geo.php:426
@@ -1589,7 +1588,7 @@ msgstr "グラフの外"
 
 #: classes/Visualizer/Render/Sidebar/Graph.php:82
 msgid "None"
-msgstr "無い"
+msgstr "表示しない"
 
 #: classes/Visualizer/Render/Sidebar/Graph.php:102
 msgid "Chart Title Position"
@@ -1666,7 +1665,7 @@ msgstr "グリッドライン"
 #: classes/Visualizer/Render/Sidebar/Graph.php:311
 #: classes/Visualizer/Render/Sidebar/Graph.php:330
 msgid "Count"
-msgstr "カウント"
+msgstr "本数"
 
 #: classes/Visualizer/Render/Sidebar/Graph.php:198
 msgid ""
@@ -1718,7 +1717,7 @@ msgstr "補助グリッドを無効にするには0を指定"
 #: classes/Visualizer/Render/Sidebar/Graph.php:233
 #: classes/Visualizer/Render/Sidebar/Graph.php:349
 msgid "View Window"
-msgstr "ウインドウを表示"
+msgstr "表示ウインドウ"
 
 #: classes/Visualizer/Render/Sidebar/Graph.php:235
 #: classes/Visualizer/Render/Sidebar/Graph.php:351
@@ -1792,14 +1791,14 @@ msgstr "Yes"
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Area.php:109
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Candlestick.php:168
 msgid "Determines whether the series has to be presented in the legend or not."
-msgstr "凡例でデータシリーズを表示するか否か"
+msgstr "凡例にデータシリーズを表示"
 
 #: classes/Visualizer/Render/Sidebar/Graph.php:446
 #: classes/Visualizer/Render/Sidebar/Graph.php:475
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Pie.php:62
 #: classes/Visualizer/Render/Sidebar.php:441
 msgid "Number Format"
-msgstr "数値フォーマット"
+msgstr "数の書式"
 
 #: classes/Visualizer/Render/Sidebar/Graph.php:451
 #: classes/Visualizer/Render/Sidebar/Type/ChartJS/Linear.php:200
@@ -1846,7 +1845,7 @@ msgstr "曲線部の無い直線"
 
 #: classes/Visualizer/Render/Sidebar/Linear.php:81
 msgid "The angles of the line will be smoothed"
-msgstr "線の角度は滑らかになります。"
+msgstr "滑らかな曲線"
 
 #: classes/Visualizer/Render/Sidebar/Linear.php:135
 #: classes/Visualizer/Render/Sidebar/Linear.php:254
@@ -1885,12 +1884,12 @@ msgstr "複数のデータポイント"
 #: classes/Visualizer/Render/Sidebar/Linear.php:188
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Candlestick.php:82
 msgid "Determines how many data points an user can select on a chart."
-msgstr "グラフ上でいくつのデータポイントをユーザーが選択できるか。"
+msgstr "ユーザが選択できるグラフ上のデータポイントの数"
 
 #: classes/Visualizer/Render/Sidebar/Linear.php:192
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Candlestick.php:86
 msgid "Aggregation Target"
-msgstr "事前集計の目標"
+msgstr "集約する目標"
 
 #: classes/Visualizer/Render/Sidebar/Linear.php:197
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Candlestick.php:91
@@ -1929,7 +1928,7 @@ msgstr ""
 
 #: classes/Visualizer/Render/Sidebar/Linear.php:208
 msgid "Point Opacity"
-msgstr "ポイントの透明度"
+msgstr "ポイントの不透明度"
 
 #: classes/Visualizer/Render/Sidebar/Linear.php:211
 msgid ""
@@ -1944,7 +1943,7 @@ msgstr "線の設定"
 #: classes/Visualizer/Render/Sidebar/Linear.php:270
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Area.php:130
 msgid "Overrides the global line width and point size values for this series."
-msgstr "データシリーズの全体的な線の太さとポイントのサイズを上書き"
+msgstr "データシリーズ全体の線の太さとポイントのサイズを上書き"
 
 #: classes/Visualizer/Render/Sidebar/Type/ChartJS/Bar.php:32
 msgid "Bar border color"
@@ -2038,7 +2037,7 @@ msgstr "ポイントの塗りつぶし色"
 
 #: classes/Visualizer/Render/Sidebar/Type/ChartJS/Line.php:56
 msgid "Point stroke width"
-msgstr "ポイントの枠線の太さ"
+msgstr "ポイントの枠線の幅"
 
 #: classes/Visualizer/Render/Sidebar/Type/ChartJS/Line.php:66
 msgid "Point style"
@@ -2173,13 +2172,13 @@ msgstr "表の設定"
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/Tabular.php:168
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Tabular.php:115
 msgid "Enable Pagination"
-msgstr "ページめくりの有効化"
+msgstr "ページングの有効化"
 
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/DataTable.php:174
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/Tabular.php:172
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Tabular.php:119
 msgid "To enable paging through the data."
-msgstr "データのページめくりを有効にする"
+msgstr "データのページングを有効にする"
 
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/DataTable.php:180
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/Tabular.php:178
@@ -2191,12 +2190,12 @@ msgstr "ページあたりの行数"
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/Tabular.php:181
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Tabular.php:128
 msgid "The number of rows in each page, when paging is enabled."
-msgstr "ページめくりを有効にした場合の、各ページに表示する行数"
+msgstr "ページングを有効にした場合の、各ページに表示する行数"
 
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/DataTable.php:192
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/Tabular.php:190
 msgid "Pagination type"
-msgstr "ページめくりの種類"
+msgstr "ページングの種類"
 
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/DataTable.php:196
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/Tabular.php:194
@@ -2231,7 +2230,7 @@ msgstr "‘最初’、’最後’、ページ番号ボタン"
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/DataTable.php:203
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/Tabular.php:201
 msgid "Determines what type of pagination options to show."
-msgstr "表示するページめくりの種類"
+msgstr "表示するページングの種類"
 
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/DataTable.php:211
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/Tabular.php:209
@@ -2263,7 +2262,7 @@ msgstr "ソートの無効化"
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/Tabular.php:235
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Tabular.php:139
 msgid "To disable sorting on columns."
-msgstr "列のソートを無効化します"
+msgstr "列のソートの無効化"
 
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/DataTable.php:243
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/Tabular.php:241
@@ -2328,7 +2327,7 @@ msgstr ""
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Tabular.php:341
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Tabular.php:370
 msgid "Text Orientation"
-msgstr "テキストの方向"
+msgstr "テキストの角度"
 
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/DataTable.php:289
 #: classes/Visualizer/Render/Sidebar/Type/DataTable/DataTable.php:321
@@ -2454,7 +2453,7 @@ msgstr ""
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Area.php:73
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Area.php:137
 msgid "Area Opacity"
-msgstr "グラフエリアの透明度"
+msgstr "グラフエリアの不透明度"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Area.php:76
 msgid ""
@@ -2463,8 +2462,8 @@ msgid ""
 "individual series, set the area opacity value in the series property."
 msgstr ""
 "面グラフのデータシリーズの色つきエリアの既定の不透明度、0.0では完全に透明、"
-"1.0では完全に不透明です。個別のデータシリーズの透明度を指定するには、データシ"
-"リーズのプロパティで透明度を指定します。"
+"1.0では完全に不透明です。個別のデータシリーズの不透明度を指定するには、データ"
+"シリーズのプロパティで不透明度を指定します。"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Area.php:140
 msgid ""
@@ -2510,8 +2509,8 @@ msgid ""
 "The size value (as appears in the chart data) to be mapped to sizeAxis."
 "maxSize. Larger values will be cropped to this value."
 msgstr ""
-"サイズの値 (チャートのデータに表示されている) がsizeAxis.maxSizeにマップされ"
-"ます。超えた値はこの値で制限されます。"
+"サイズの値 (グラフのデータに表示されている) がsizeAxis.maxSizeにマップされま"
+"す。超えた値はこの値で制限されます。"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Bubble.php:107
 msgid "Size (min)"
@@ -2522,8 +2521,8 @@ msgid ""
 "The size value (as appears in the chart data) to be mapped to sizeAxis."
 "minSize. Smaller values will be cropped to this value."
 msgstr ""
-"サイズの値 (チャートのデータに表示されている) がsizeAxis.minSizeにマップされ"
-"ます。より小さな値はこの値で制限されます。"
+"サイズの値 (グラフのデータに表示されている) がsizeAxis.minSizeにマップされま"
+"す。より小さな値はこの値で制限されます。"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Candlestick.php:57
 msgid "Candles Settings"
@@ -2535,7 +2534,7 @@ msgstr "Failing Candles"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Candlestick.php:105
 msgid "The stroke width of falling candles."
-msgstr "Failing Candlesの枠線の太さ"
+msgstr "Failing Candlesの枠線の幅"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Candlestick.php:117
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Candlestick.php:141
@@ -2548,7 +2547,7 @@ msgstr "Rising Candles"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Candlestick.php:129
 msgid "The stroke width of rising candles."
-msgstr "Rising Candlesの枠線の太さ"
+msgstr "Rising Candlesの枠線の幅"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Gauge.php:56
 msgid "Gauge Settings"
@@ -2625,7 +2624,7 @@ msgstr "API"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Geo.php:107
 msgid "Add the Google Maps API key (Click %1$shere%2$s to get the key)"
-msgstr "Google MapのAPIキーを追加 (キーを取得するには%1$shere%2$sをクリック)"
+msgstr "Google MapsのAPIキーを追加 (キーを取得するには%1$sここ%2$sをクリック)"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Geo.php:111
 msgid "API Key"
@@ -2748,7 +2747,8 @@ msgstr "色の軸"
 msgid ""
 "Configure color axis gradient scale, minimum and maximun values and a color "
 "of the dateless regions."
-msgstr "色の軸のグラデーションスケールの設定、最小・最大値と日付の無い地域の色"
+msgstr ""
+"色の軸のグラデーションスケールの設定、最小・最大値とデータの無い地域の色"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Geo.php:230
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Geo.php:294
@@ -2765,7 +2765,7 @@ msgstr "中間値"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Geo.php:270
 msgid "Dateless Region"
-msgstr "日付の無い地域"
+msgstr "データの無い地域"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Geo.php:288
 msgid "Size Axis"
@@ -2879,15 +2879,15 @@ msgstr "3D"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Pie.php:86
 msgid "If set to yes, displays a three-dimensional chart."
-msgstr "yesの場合、3Dグラフとして表示します。"
+msgstr "yesの場合、3Dグラフとして表示"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Pie.php:90
 msgid "Reverse Categories"
-msgstr "逆順のカテゴリー"
+msgstr "カテゴリーを逆順に表示"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Pie.php:94
 msgid "If set to yes, will draw slices counterclockwise."
-msgstr "yesの場合、スライスを反時計回りに描画します。"
+msgstr "yesの場合、スライスを反時計回りに描画"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Pie.php:98
 msgid "Slice Text"
@@ -2911,7 +2911,7 @@ msgstr "スライスの定量値とパーセンテージ"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Pie.php:108
 msgid "No text is displayed"
-msgstr "表示するテキストがありません。"
+msgstr "テキストを表示しない"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Pie.php:110
 msgid "The content of the text displayed on the slice."
@@ -3057,7 +3057,7 @@ msgstr "ホバーした表の行"
 
 #: classes/Visualizer/Render/Sidebar/Type/GoogleCharts/Tabular.php:325
 msgid "Header Cell"
-msgstr "ヘッダーのセル"
+msgstr "ヘッダのセル"
 
 #: classes/Visualizer/Render/Sidebar.php:130
 msgid ""
@@ -3065,8 +3065,8 @@ msgid ""
 "%1$sGoogle Visualization API%2$s. You can refer to to some examples %3$shere"
 "%4$s."
 msgstr ""
-"%1$sGoogle Visualization API%2$s の設定でグラフを構成する。%3$shere%4$s の例"
-"を参照。"
+"%1$sGoogle Visualization API%2$s の設定でグラフを構成する。%3$sこの例%4$s を"
+"参照。"
 
 #: classes/Visualizer/Render/Sidebar.php:162
 msgid "Manual Configuration"
@@ -3118,7 +3118,7 @@ msgstr "画像をダウンロード"
 
 #: classes/Visualizer/Render/Sidebar.php:234
 msgid "Not supported for this chart type."
-msgstr "このタイプのグラフはサポートされていません。"
+msgstr "このグラフの種類は非サポート"
 
 #: classes/Visualizer/Render/Sidebar.php:234
 msgid "To download the chart as an image."
@@ -3162,7 +3162,7 @@ msgstr "メディアライブラリに保存しますか？"
 
 #: classes/Visualizer/Render/Sidebar.php:530
 msgid "To enable save the image as an inside media library."
-msgstr "メディアライブラリ内の画像での保存の有効化"
+msgstr "メディアライブラリ内への画像での保存の有効化"
 
 #: classes/Visualizer/Render/Templates.php:68
 msgid "Click to select"
@@ -3173,8 +3173,8 @@ msgid ""
 "File should have a heading row (1st row) and a data type row (2nd row). "
 "Please try again."
 msgstr ""
-"ファイルにはヘッダー行 (1行目) とデータタイプ行 (2行目) が含まれていなければ"
-"なりません。再度試して下さい。"
+"ファイルにはヘッダ行 (1行目) とデータタイプ行 (2行目) が含まれていなければな"
+"りません。再度試して下さい。"
 
 #: classes/Visualizer/Source/Csv.php:90
 msgid ""
